# FoxGLBox

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
docs/: plan.md
renderer/: CMakeLists.txt
renderer/public/: DrawGeometry.hpp  IMaterial.hpp  IRenderWorld.hpp  RenderEntityParams.hpp  RenderModelParams.hpp  RenderView.hpp
renderer/src/: FrontendTexture.cpp  FrontendTexture.hpp  IRenderer.hpp  Material.cpp  Material.hpp  Model.cpp  Model.hpp  RenderEntity.hpp  RenderSystem.cpp  RenderWorld.cpp  RenderWorld.hpp
renderer/src/Backends/: BackendRegistry.cpp  BackendRegistry.hpp
renderer/src/Backends/OpenGL45/: Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexBuffer.cpp  VertexBuffer.hpp
samples/: CMakeLists.txt
samples/assets/: README.MD  test_cover.blend  text.blend
samples/assets/shaders/: default.glsl
samples/bed/: CMakeLists.txt  Main.cpp
samples/game/: CMakeLists.txt  Engine.cpp  Engine.hpp  GameEntity.cpp  GameEntity.hpp  IEngine.hpp  IPhysics.hpp  Main.cpp  Physics.cpp  Physics.hpp  Vector.cpp  Vector.hpp
